Some more changes